# Team06-SEAME-warm-up

./: ADR.md  README.md  Retrospective.md  test.txt
.github/: ci.yml
.github/workflows/: ci.yml  ex02_test.yml  ex03_compilecheck.yml  m00ex02_test.yml  m00ex03_test.yml  m01ex00_test.yml  m01ex01_test.yml  m01ex02_test.yml  module02_ex01.yml
Members_info/: ndo-vale_info.md
Modules/: README.md
Modules/Module00/: JOURNAL.md  JOURNAL00.md
Modules/Module00/ex02/: CMakeLists.txt
Modules/Module00/ex02/test/: CMakeLists.txt  test_ex02.cpp
Modules/Module00/ex03/: CMakeLists.txt
Modules/Module00/ex03/inc/: Contact.hpp  Phonebook.hpp
Modules/Module00/ex03/src/: Contact.cpp  Phonebook.cpp  main.cpp
Modules/Module00/ex03/test/: CMakeLists.txt  test_ex03.cpp
Modules/Module01/: JOURNAL.md  JOURNAL01.md
Modules/Module01/ex00/: CMakeLists.txt
Modules/Module01/ex00/inc/: Car.hpp
Modules/Module01/ex00/src/: Car.cpp  main.cpp
Modules/Module01/ex00/test/: CMakeLists.txt  test_ex00.cpp
Modules/Module01/ex01/: CMakeLists.txt
Modules/Module01/ex02/: CMakeLists.txt
Modules/Module02/: Exercise_00.txt
Modules/Module02/Exercise_01/: CMakeLists.txt
Modules/Module02/Exercise_01/inc/: Brake.hpp  Car.hpp  Engine.hpp
Modules/Module02/Exercise_01/src/: Car.cpp  Engine.cpp  Part.cpp  Wheel.cpp
Modules/Module02/Exercise_01/test/: CMakeLists.txt  test_ex01.cpp
Modules/Module03/Exercise00/: Contact.h  ContactList.cpp  ContactList.h  Exercise00.pro  contactdialog.cpp  contactdialog.h  contactitemwidget.cpp  contactitemwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  save.me
Modules/Module04/Exercise00/: Car.cpp  Car.hpp  CarThread.cpp  CarThread.hpp  Exercise00.pro  Game.pro  MainWindow.cpp  MainWindow.hpp  RaceCanvas.cpp  RaceCanvas.hpp  RaceTrack.cpp  RaceTrack.hpp  car.cpp  car.h  carthread.cpp  carthread.h  mainwindow.cpp  mainwindow.h  race.pro  racetrack.cpp  racetrack.h  racewidget.cpp  racewidget.h
PiRacer_assembly/: ADR.md
SEA-ME-warm-up/Module02/Exercise_01/: Brake.cpp  Brake.hpp  Car.cpp  Car.hpp  Engine.cpp  Engine.hpp  Part.cpp  Part.hpp  Transmission.cpp  Transmission.hpp  Wheel.cpp  Wheel.hpp  a.out
SEA-ME-warm-up/Modules/Module00/: ADR.md  Module00.md
SEA-ME-warm-up/Modules/Module01/: main.cpp  teste.py
(+27 files in other folders)
